# kuet-ml-workshop-2025

./: .env.example  .gitignore  README.md  hello.py  pyproject.toml
examples/: basic.py  function_calling.py  functions.py  text_chat.py
